# eiskig-drl-applications

./: README.md  eventlog.txt  pyproject.toml  setup.cfg
EISKIG Applications/BOSCH/: BoschStateVars.csv
EISKIG Applications/BOSCH/ReducedBoschSystem/: EvalFY.py  FullYearEval_split.py  Show_Training_progress.py  experiments_FullYearEval.py  experiments_FullYearEval2018.py  experiments_eval.py  experiments_eval_2018.py  experiments_ppo.py  experiments_rule_based.py  makebigtimeplots.py  plotAndAnalyseEval.py  plotAndAnalyseEvalTime.py  plotAndAnalyseEval_2.py  purgeFiles.py
EISKIG Applications/EQUINIX/: daten_2017.csv  random_values_2017.csv
EISKIG Applications/EQUINIX/Equinix/: experiments_ppo.py
EISKIG Applications/EQUINIX/Equinix_PID_ohne_wBus/: experiments_ppo.py  experiments_rule_based.py
EISKIG Applications/Legacy/Askari_MA/: testFMU.py
EISKIG Applications/MERCK/supplysystem_Merck/: experiments_ppo.py  experiments_rule_based.py
EISKIG Applications/supplysystem_ETA/: 00_experiments_rule_based.py  01_experiments_ppo.py  experiment_rule_based_LIVE.py  experiments_ppo_LIVE.py
EISKIG Applications/supplysystem_ETA/archive/: experiments_ETA_TSCL.py  rule_based_controller_TSCL.py
EISKIG Applications/supplysystem_ETA/common/: fmu.py
cleaning_machine_kea/: experiments_mpc_live.py
cleaning_machine_kea/config/: cleaning_machine_kea_mpc.json
cleaning_machine_kea/environment/: env_connection.py
docs/: conf.py  index.rst
docs/subpackage/: module.rst
experiments_hr/common/: PI_evaluation.py  base_env_sim.py  check_cuda.py  controllerFunctions.py  factory_demand_2017_adaption.py  factory_demand_analyzer.py  helpers.py  ksf.py  parameter_identification.py  rmse_comparison.py  sensitivity_analysis.py  todo.py
experiments_hr/damped_oscillator/: experiments_DRL.py  experiments_PID.py
experiments_hr/supplysystem_ETA/: SATestETA.py  experiments_ppo_LIVE.py  experiments_rule_based.py  experiments_rule_based_QSolar.py  experiments_speed_test_FMU_Export.py  experiments_speed_test_number_envs.py
experiments_hr/supplysystem_a/: HyperParameterSeach.py  experiments_ppo.py  experiments_ppo_comparison.py  experiments_rule_based.py  results_HyperParameterSearch.py
experiments_hr/supplysystem_b/: 00_rule_based_360_days.py  01_day_identification_system_panten.py  02_sensitivity_analysis_system_panten.py  03_SA_excel_export.py  04_parameter_identification_system_panten.py  05_global_PI.xlsx  06_PI_evaluation.py  07_PI_evaluation_excel_export.py  08_ppo_training.py  09_ppo_inference.py  10_experiments_csv_based.py  MaskableExperiment.py  XX_experiments_ppo_cnn.py  experiments_ppo.py
experiments_hr/template/: name_of_experiment.py
experiments_tl/AFA/: 04_parameter_identification_AFA.py  experiments_rule_based.py
experiments_tl/supplysystem_a/: 00_rule_based.py  01_baseline_experiments_ppo.py  02_experiments_ppo_cnn.py  04_experiments_ppo_lstm.py  05_experiments_td3.py
experiments_tl/supplysystem_b/: 01_baseline_experiment_ppo.py  XX_experiments_td3.py
supplysystem_ETA/: day_identification_system_eta.py  experiment_rule_based_live.py  experiments_Performance_Evaluation.py  experiments_ppo.py  parameter_identification_system_eta.py  sensitivity_analysis_system_eta.py
test/: test_main.py
(+210 files in other folders)
